<resources>
    <string-array name="invoice_table">
        <item>№ </item>
        <item>Наименование</item>
        <item>Ед. изм.</item>
        <item>Кол-во</item>
        <item>Расценка, руб.</item>
        <item>Итог, руб.</item>
    </string-array>
    <string name="app_has_no_permission_to_write">У приложения нет прав на запись в память.</string>
    <string name="app_has_no_permission_to_read">У приложения нет прав на чтение из памяти.</string>
    <string name="choose_type_delete_title">Удаление</string>
    <string name="work_types">типы работ</string>
    <string name="choose_type_delete_summary">Вы уверены, что хотите удалить этот тип работ? Вся его информация будет удалена.</string>
    <string name="edit_name_delete_room_title">Удаление</string>
    <string name="edit_name_delete_room_text">
        Вы уверены, что хотите удалить эту комнату? Все работы, которые в ней содержатся, будут также удалены.\n
    </string>
    <string name="materials">Материалы</string>
    <string name="tools">Инструменты</string>
    <string name="email">Email</string>
    <string name="phone">Тел.</string>
    <string name="address">Адрес.</string>
    <string name="company">Адрес.</string>
    <string name="name">Имя</string>
    <string name="title_activity_edit_name">Введите имя</string>
    <string name="add_materials">Материалы</string>
    <string name="share">Поделиться</string>
    <string name="view">Просмотреть</string>
    <string name="mark_done">Выполненное</string>
    <string name="title_activity_edit_room">Редактор комнаты</string>
    <string name="Sample_Text">Sample Text</string>
    <string name="project_name">Название проекта</string>
    <string name="edit_room">Изменить помещение</string>
    <string name="want_to_discard_changes">Если вы вернётесь, то потеряете все внесённые изменения.</string>
    <string name="want_to_go_back">Уверены, что хотите вернуться?</string>
    <string name="choose_new_works">Работы</string>
    <string name="next_button">Далее</string>
    <string name="current_coeff">Текущий коэффициент: </string>
    <string name="title_activity_choose_works">Выберите тип</string>
    <string name="new_material">Добавить тип работ</string>
    <string name="new_type">Новый тип</string>
    <string name="coeff">Коэффициент</string>
    <string name="such_project_already_exists">Проект с таким названием уже существует</string>
    <string name="title_activity_list_overview_new_material">ListOverviewNewMaterial</string>
    <string name="title_activity_list_overview">ListOverview</string>
    <string name="list_overview_empty">Список работ данного типа пуст. Нажмите на ПЛЮС, чтобы добавить работу.</string>
    <string name="app_name">Смарт Смета</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_alert_delete_title">Удаление</string>
    <string name="main_alert_delete_summary">Вы уверены, что хотите удалить этот проект? Вся его информация будет удалена.</string>
    <string name="main_about_text">
        Чтобы удалить проект из списка
        нажмите на проект и удерживайте.\n
        \n
        Для добавления нового проекта, нажмите на ПЛЮС.
    </string>
    <string name="main_empty_list">У вас нет проектов. Нажмите на ПЛЮС, чтобы создать проект.</string>
    <string name="main_view_alert_choose">Выберите тип файла для просмотра</string>
    <string name="main_share_alert_choose">Выберите тип файла для отправки</string>
    <string-array name="main_list">
        <item>PDF файл</item>
        <item>XLS таблица</item>
    </string-array>
    <string name="nav_projects">Текущие проекты</string>
    <string name="nav_price_work">Расценки на работы</string>
    <string name="nav_price_material">Материалы</string>
    <string name="nav_menu_settings">Мои подрядчики</string>
    <string name="nav_menu_contacts">Контактные данные</string>
    <string name="nav_menu_archive">Архив</string>
    <string name="nav_menu_add">Дополнительно</string>
    <string name="nav_menu_abut">О программе</string>
    <string name="title_activity_price_work_category">Мои типы работ</string>
    <string name="price_work_category_about_text">
        Чтобы удалить тип работ из списка
        нажмите на тип работ и удерживайте.\n
        \n
        Для добавления нового типа работ
        в список, нажмите на ПЛЮС.
    </string>
    <string name="price_work_category_alert_delete_title">Удаление</string>
    <string name="price_work_category_alert_delete_summary">
        Вы уверены, что хотите удалить этот тип работ? Все работы данного типа также будут удалены.\n
        \n
        Этот тип работ и все его работы будут удалены из всех проектов, где они используются.
    </string>
    <string name="price_work_category_empty_list">Список типов работ пуст. Нажмите на ПЛЮС, чтобы добавить новый тип работ.</string>
    <string name="title_popup_name_category">Введите название типа работ.</string>
    <string name="popup_name_category_toast_need_name">Пожалуйста, введите название типа работ.</string>
    <string name="popup_name_category_toast_bad_symbol">Название типа работ не должно содержать символов:</string>
    <string name="popup_name_category_toast_equal_name">Такое название уже существует.</string>
    <string name="title_activity_price_work"></string>
    <string name="price_work_about_text">
        Чтобы удалить работу из списка
        нажмите на работу и удерживайте.\n
        \n
        Для добавления новой работы
        в список, нажмите на ПЛЮС.
    </string>
    <string name="price_work_alert_delete_title">Удаление</string>
    <string name="price_work_alert_delete_summary">
        Вы уверены, что хотите удалить эту работу? Эта работа будет удалена из всех проектов, где она используется.
    </string>
    <string name="price_project_name_popup_need_name">Пожалуйста, введите название проекта.</string>
    <string name="title_activity_work">Новая работа</string>
    <string name="work_work_name">Название работы</string>
    <string name="work_price">Стоимость работ:</string>
    <string name="work_ruble_slash">руб/</string>
    <string name="work_coefficient">(множитель)</string>
    <string name="work_list_material">Материалы</string>
    <string name="work_list_instruments">Инструменты</string>
    <string name="work_list_hint_name">Наименование</string>
    <string name="work_list_hint_sum">Стоимость, руб</string>
    <string name="work_new_work">Новая работа</string>
    <string name="work_about_text">
        Чтобы удалить элемент из списка
        необходимых для работы,
        нажмите на элемент и удерживайте.\n
        \n
        Для добавления нового элемента,
        в список необходимых
        для работы, нажмите на ПЛЮС.
    </string>
    <string name="work_alert_delete_title">Удаление</string>
    <string name="work_alert_delete_summary_material">Вы уверены, что хотите удалить этот материал?</string>
    <string name="work_alert_delete_summary_instrument">Вы уверены, что хотите удалить этот инструмент?</string>
    <string name="work_empty_list_material">Список материалов пуст. Нажмите на ПЛЮС, чтобы добавить новый материал.</string>
    <string name="work_empty_list_instrument">Список инструментов пуст. Нажмите на ПЛЮС, чтобы добавить новый инструмент.</string>
    <string name="work_material_not_choose">не выбрано</string>
    <string name="work_toast_need_name">Пожалуйста, введите название работы.</string>
    <string name="work_toast_bad_symbol">Название работы не должно содержать символов:</string>
    <string name="work_toast_equal_name">Такое название уже существует.</string>
    <string name="title_activity_search">Выберите необходимое</string>
    <string name="search_empty_list">Список пуст</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="settings_about_text">
        Здесь Вы можете указать информацию о себе и компании. Эта информация будет отображена в смете.
    </string>
    <string name="settings_hint_first_name">Имя</string>
    <string name="settings_hint_surname">Фамилия</string>
    <string name="settings_hint_company_name">Название компании</string>
    <string name="settings_hint_phone">Номер телефона</string>
    <string name="settings_hint_email">Адрес электронной почты</string>
    <string name="settings_hint_address">Адрес</string>
    <string name="settings_company_name">Название:</string>
    <string name="settings_phone">Телефон:</string>
    <string name="settings_email">Email:</string>
    <string name="settings_address">Адрес:</string>
    <string name="settings_company_info">Информация о компании</string>
    <string name="settings_alert_choose">Что нужно сделать?</string>
    <string-array name="settings_no_photo">
        <item>Сделать снимок</item>
        <item>Загрузить из галереи</item>
    </string-array>
    <string-array name="settings_photo">
        <item>Удалить</item>
        <item>Сделать снимок</item>
        <item>Загрузить из галереи</item>
    </string-array>
    <string name="unique_work">Уникальная работа</string>
    <string name="coefficient">Множитель работы</string>
    <string name="work_summary">Итого за работу</string>
    <string name="sample_name">Проект</string>
    <string name="title_activity_about">О приложении</string>
    <string name="about_version">Версия программы:</string>
    <string name="title_activity_complete">Ход работы</string>
    <string name="complete_empty_list">У вас нет работ. Вы все сделали!</string>
    <string name="button_done">Готово</string>
    <string name="button_cancel">Отмена</string>
    <string name="total">Итого:</string>
    <string name="done">Готово</string>
    <string name="save">Сохранить</string>
    <string name="saved">Сохранено</string>
    <string name="delete">Удалить</string>
    <string name="help">Помощь</string>
    <string name="removed">удалено</string>
    <string name="ok">Ок</string>
    <string name="add">Добавить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="makeSureAllTypesAreComplete">Один из типов работ заполнен неправильно, убедитесь, что все данные введены верно.</string>
    <string name="room_room">Комната</string>
    <string name="room_bath_toilet">Ванная/Туалет</string>
    <string name="room_kitchen">Кухня</string>
    <string name="room_corridor">Коридор</string>
    <string name="room_balcony">Балкон</string>
    <string name="room_other">Другое</string>
    <string name="ruble_short">руб</string>
    <string name="pdf_total_cost">Итого:</string>
    <string name="pdf_room_cost">Итого за помещение:</string>
    <string name="pdf_work_summary">Всего за работы:</string>
    <string name="pdf_materials_summary">Всего за материалы:</string>
    <string name="pdf_total_invoice">Итого по смете:</string>
    <string name="pdf_page_number">Страница</string>
    <string-array name="measurements_work">
        <item>Метр</item>
        <item>Квадратный метр</item>
        <item>Штука</item>
    </string-array>
    <string-array name="measurements_work_short">
        <item>м</item>
        <item>м2</item>
        <item>шт</item>
    </string-array>
    <string-array name="measurements_work_word">
        <item>Длинна</item>
        <item>Площадь</item>
        <item>Количество</item>
    </string-array>
    <string-array name="measurements_material">
        <item>Метр</item>
        <item>Квадратный метр</item>
        <item>Кубический метр</item>
        <item>Погонный метр</item>
        <item>Килограмм</item>
        <item>Литр</item>
        <item>Штука</item>
    </string-array>
    <string-array name="measurements_material_short">
        <item>м</item>
        <item>м2</item>
        <item>м3</item>
        <item>м.пог.</item>
        <item>кг</item>
        <item>л</item>
        <item>шт</item>
    </string-array>
</resources>