<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- шторка layout/activity_main-->

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_new_project"
            android:icon="@drawable/ic_new_project"
            android:title="@string/nav_new_project" />
        <item
            android:id="@+id/nav_price_work"
            android:icon="@drawable/ic_price_work"
            android:title="@string/nav_price_work" />
        <item
            android:id="@+id/nav_price_material"
            android:icon="@drawable/ic_price_material"
            android:title="@string/nav_price_material" />
        <item
            android:id="@+id/nav_menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_menu_settings" />
    </group>

    <item android:title="@string/nav_menu_add">
        <menu>
            <item
                android:id="@+id/nav_menu_abut"
                android:title="@string/nav_menu_abut" />
        </menu>
    </item>

</menu>
