<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gbarto.ru.smeta.WorkActivity"
    tools:showIn="@layout/activity_work"
    android:orientation="vertical"
    android:gravity="top"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/work_editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/work_work_name"
        android:inputType="textAutoComplete"
        android:text=""/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_price"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/work_editText_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="0"
            android:inputType="numberSigned|numberDecimal"
            android:maxLength="7"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_ruble_slash"
            android:textSize="16sp"
            android:paddingLeft="5dp"/>

        <Spinner
            android:id="@+id/work_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/measurements_work"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/work_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/work_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:paddingRight="15dp"/>

        <EditText
            android:id="@+id/work_editText_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="0"
            android:inputType="numberSigned|numberDecimal"
            android:maxLength="7"
            android:layout_alignBaseline="@+id/work_text_size"
            android:layout_alignBottom="@+id/work_text_size"
            android:layout_toRightOf="@+id/work_text_size"
            android:layout_toEndOf="@+id/work_text_size" />

        <LinearLayout
            android:id="@+id/work_linerLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/work_text_size"
                android:gravity="center">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10">

                    <TextView
                        android:id="@+id/work_list_material"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_list_material"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"/>

                    <View
                        android:id="@+id/work_list_underline_material"
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="@color/blue" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/work_imageView_new"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/round_shape"
                    android:src="@drawable/ic_plus"
                    android:padding="8dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:elevation="3dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10">

                    <TextView
                        android:id="@+id/work_list_instruments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/work_list_instruments"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="center"/>

                    <View
                        android:id="@+id/work_list_underline_instruments"
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:background="@color/blue" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/work_viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@+id/work_linerLayout" />

        <TextView
            android:id="@+id/work_text_list_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@+id/work_listView"/>
    </RelativeLayout>

</LinearLayout>